--- a/BajuSixthSense.xcodeproj/xcshareddata/xcschemes/BajuSixthSense.xcscheme
+++ b/BajuSixthSense.xcodeproj/xcshareddata/xcschemes/BajuSixthSense.xcscheme
@@ -79,6 +79,13 @@
             ReferencedContainer = "container:BajuSixthSense.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CORESVG_VERBOSE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
